Review and fix entire system
